Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectTextObj.quorum
Text t
t:SetValue("text")
Object o = cast(Object, t)
Text a = cast(Text, o)
output a:GetValue()