Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextUndefined.quorum
Text x = undefined
text i = cast(text, x)